# AegisAI

./: .gitignore  README.md  README.txt  compose-e2e-logs.txt  compose-test-logs.txt  docker-compose.ci.yml  docker-compose.e2e.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.test.yml  main.py  pyproject.toml  railway.toml  refactor_tests.py  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260413_000001_initial_schema.py  20260413_000002_admin_user_fields.py
backend/scripts/: prepare_database.py  seed.py  start-backend.sh
backend/src/: database.py  main.py
backend/src/api/: deps.py
backend/src/core/: chroma.py  config.py  database.py  database_migrations.py  database_urls.py  db.py  logger.py  security.py
backend/src/crud/: user.py
backend/src/models/: conversation_model.py  document_model.py  flagged_event_model.py  registry.py  user_model.py
backend/src/moderation/: exceptions.py  keyword_filter.py  keywords.py
backend/src/providers/: __init__.py  deepseek.py  gemini.py  groq.py  mock_provider.py
backend/src/repo/: conversation_repo.py  document_repo.py  flagged_event_repo.py  user_repo.py  user_repository.py
backend/src/schemas/: admin_schema.py  auth.py  auth_schema.py  chat_schema.py  document_schema.py  rag_schema.py  user_schema.py  users.py
backend/src/security/: duo.py  jwt.py  password.py
backend/src/service/: admin_service.py  auth_service.py  chat_service.py  document_service.py  rag_service.py  seed_service.py  (+1 more)
backend/tests/: conftest.py  test_users.py
(+270 files in other folders)
