[project]
name = "aegis-ai-backend"
version = "0.1.0"
description = "AegisAI Backend Services"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.16.5",
    "fastapi>=0.133.1",
    "sqlalchemy>=2.0.47",
    "asyncpg>=0.31.0",
    "psycopg2-binary>=2.9.10",
    "pydantic[email]>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pyjwt>=2.11.0",
    "bcrypt>=5.0.0",
    "passlib[bcrypt]>=1.7.4",
    "greenlet>=3.3.2",
    "uvicorn[standard]>=0.27.0",
    "chromadb>=0.5.0",
    "pypdf>=4.0.0",
    "python-multipart>=0.0.9",
    "duo-universal>=1.3.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-dotenv>=0.5.2",
    "aiosqlite>=0.22.1",
    "httpx>=0.28.1",
]

[tool.pytest.ini_options]
pythonpath = [
    "."
]
asyncio_mode = "auto"
env_files = [
    ".env.example"
]
asyncio_default_fixture_loop_scope = "function"
asyncio_default_test_loop_scope = "function"
